--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@rollup/plugin-node-resolve": "^15.2.1",
         "@rollup/plugin-typescript": "^11.1.3",
         "@tsconfig/recommended": "^1.0.2",
+        "@types/dompurify": "^3.0.3",
         "@types/jquery": "^3.5.17",
         "@types/webextension-polyfill": "^0.10.2",
         "cross-env": "^7.0.3",
