Add React capability to build process

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "iter-ops": "^3.1.1",
         "jquery": "^3.7.1",
         "pako": "^0.2.6",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "snuownd": "github:gamefreak/snuownd#533e8dcb67fe8e4ddc83fb8317ed0d10c25b6fcb",
         "timeago": "^1.6.7",
         "tinycolor2": "^1.6.0",
@@ -33,9 +35,12 @@
     "devDependencies": {
         "@rollup/plugin-commonjs": "^25.0.4",
         "@rollup/plugin-node-resolve": "^15.2.1",
+        "@rollup/plugin-replace": "^5.0.5",
         "@rollup/plugin-typescript": "^11.1.3",
         "@tsconfig/recommended": "^1.0.2",
         "@types/jquery": "^3.5.17",
+        "@types/react": "^18.2.23",
+        "@types/react-dom": "^18.2.8",
         "@types/webextension-polyfill": "^0.10.2",
         "cross-env": "^7.0.3",
         "del-cli": "^5.1.0",
