--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,10 @@
     ],
     "parserOptions": {
         "ecmaVersion": 11,
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
     },
     "env": {
         "browser": true,
