--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "dprint": "^0.41.0",
         "eslint": "^8.49.0",
         "eslint-plugin-import": "^2.28.1",
+        "eslint-plugin-react": "^7.33.2",
         "inquirer": "^9.2.11",
         "jsdoc": "^4.0.2",
         "rollup": "^3.2.3",
