--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@rollup/plugin-typescript": "^11.1.3",
         "@tsconfig/recommended": "^1.0.2",
         "@types/jquery": "^3.5.17",
+        "@types/jquery.timeago": "^1.0.33",
         "@types/react": "^18.2.23",
         "@types/react-dom": "^18.2.8",
         "@types/webextension-polyfill": "^0.10.2",
