--- a/extension/firefox_manifest.json
+++ b/extension/firefox_manifest.json
@@ -4,8 +4,8 @@
     "author": "toolbox team",
     "short_name": "toolbox",
     "description": "A set of tools to be used by moderators on reddit in order to make their jobs easier.",
-    "version": "6.1.10",
-    "version_name": "6.1.10: \"Delaying Donkey\"",
+    "version": "7.0.0",
+    "version_name": "7.0.0: \"Oh God Erin What Are You Doing\"",
     "browser_specific_settings": {
         "gecko": {
             "id": "yes@jetpack",
