--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "license": "Apache-2.0",
     "dependencies": {
+        "@reduxjs/toolkit": "^2.1.0",
         "codemirror": "^5.65.15",
         "dompurify": "^3.0.5",
         "iter-ops": "^3.1.1",
@@ -27,6 +28,7 @@
         "pako": "^0.2.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-redux": "^9.1.0",
         "snuownd": "github:gamefreak/snuownd#533e8dcb67fe8e4ddc83fb8317ed0d10c25b6fcb",
         "timeago": "^1.6.7",
         "tinycolor2": "^1.6.0",
