Revert "Update manifest"
This reverts commit ebf4030b6dcf6730b9c6dcd8b1171307c3e9ba44.

--- a/extension/chrome_manifest.json
+++ b/extension/chrome_manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
-    "name": "Neolib Mod toolbox for reddit",
-    "author": "toolbox team + jenbanim",
+    "name": "Moderator toolbox for reddit",
+    "author": "toolbox team",
     "short_name": "toolbox",
     "description": "A set of tools to be used by moderators on reddit in order to make their jobs easier.",
     "version": "6.1.10",
