--- a/extension/firefox_manifest.json
+++ b/extension/firefox_manifest.json
@@ -1,14 +1,14 @@
 {
     "manifest_version": 2,
-    "name": "Neolib Mod toolbox for reddit",
-    "author": "toolbox team + jenbanim",
+    "name": "Moderator toolbox for reddit",
+    "author": "toolbox team",
     "short_name": "toolbox",
     "description": "A set of tools to be used by moderators on reddit in order to make their jobs easier.",
     "version": "6.1.10",
     "version_name": "6.1.10: \"Delaying Donkey\"",
     "browser_specific_settings": {
         "gecko": {
-            "id": "jenbanim@neoliberal",
+            "id": "yes@jetpack",
             "strict_min_version": "57.0"
         }
     },
