--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,8 @@ jobs:
       with:
         node-version: '16'
     - run: npm ci
-    - run: npm run eslint
+    - run: npm run fmt
+    - run: npm run lint
     - env:
         NODE_ENV: production
       run: npm run build
