--- a/extension/chrome_manifest.json
+++ b/extension/chrome_manifest.json
@@ -87,6 +87,7 @@
     "web_accessible_resources": [
         {
             "resources": [
+                "/data/bundled.css",
                 "/data/styles/font/MaterialIcons-Regular.woff2",
                 "/data/styles/font/MaterialIcons-Regular.woff",
                 "/data/styles/font/MaterialIcons-Regular.ttf",
