--- a/extension/firefox_manifest.json
+++ b/extension/firefox_manifest.json
@@ -91,6 +91,7 @@
         }
     ],
     "web_accessible_resources": [
+        "/data/bundled.css",
         "/data/styles/font/MaterialIcons-Regular.woff2",
         "/data/styles/font/MaterialIcons-Regular.woff",
         "/data/styles/font/MaterialIcons-Regular.ttf",
