--- a/.github/workflows/publish-stable.yml
+++ b/.github/workflows/publish-stable.yml
@@ -3,6 +3,7 @@ on:
   push:
     tags:
     - "v*"
+    - "!v*-*"
 
 jobs:
   build-release:
@@ -16,7 +17,8 @@ jobs:
     - run: npm run fmt
     - run: npm run lint
     - env:
-        NODE_ENV: production
+        BUILD_TYPE: stable
+        BUILD_SHA: ${{ github.sha }}
       run: npm run build
 
     - name: Zip Chrome build
