rework release script a bit
- now checks for uncommitted stuff in working directory and kicks you out if it finds anything
- now asks for release type and automatically commits and tags the version update
- adds it as package script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "lint:fix": "eslint . --config .eslintrc.json --ignore-path .eslintignore --fix",
         "fmt": "dprint check",
         "fmt:fix": "dprint fmt",
-        "docs": "jsdoc -c jsdoc.json"
+        "docs": "jsdoc -c jsdoc.json",
+        "release": "node release.mjs"
     },
     "homepage": "http://www.reddit.com/r/toolbox",
     "repository": {
