--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "scripts": {
         "build": "del-cli build && rollup -c rollup.config.js",
         "build:watch": "rollup -c rollup.config.js --watch",
-        "build:release": "npm ci && del-cli build && node release.mjs && cross-env NODE_ENV=production rollup -c rollup.config.js",
         "lint": "eslint . --config .eslintrc.json --ignore-path .eslintignore",
         "lint:fix": "eslint . --config .eslintrc.json --ignore-path .eslintignore --fix",
         "fmt": "dprint check",
         "fmt:fix": "dprint fmt",
-        "docs": "jsdoc -c jsdoc.json"
+        "docs": "jsdoc -c jsdoc.json",
+        "release": "node release.mjs"
     },
     "homepage": "http://www.reddit.com/r/toolbox",
     "repository": {
