--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "@tsconfig/recommended/tsconfig.json",
     "compilerOptions": {
+        "target": "ESNext",
         "allowJs": true,
         // we only really care about rollup output, but if we leave this unset
         // then tooling will complain about the tsconfig.json being invalid
