--- a/extension/chrome_manifest.json
+++ b/extension/chrome_manifest.json
@@ -71,7 +71,6 @@
                 "data/styles/macros.css",
                 "data/styles/queue_overlay.css",
                 "data/styles/modmatrix.css",
-                "data/styles/modnotes.css",
                 "data/styles/codemirror/codemirror.css",
                 "data/styles/codemirror/dialog.css",
                 "data/styles/codemirror/fullscreen.css",
@@ -87,6 +86,7 @@
     "web_accessible_resources": [
         {
             "resources": [
+                "/data/bundled.css",
                 "/data/styles/font/MaterialIcons-Regular.woff2",
                 "/data/styles/font/MaterialIcons-Regular.woff",
                 "/data/styles/font/MaterialIcons-Regular.ttf",
