--- a/extension/firefox_manifest.json
+++ b/extension/firefox_manifest.json
@@ -77,7 +77,6 @@
                 "data/styles/macros.css",
                 "data/styles/queue_overlay.css",
                 "data/styles/modmatrix.css",
-                "data/styles/modnotes.css",
                 "data/styles/codemirror/codemirror.css",
                 "data/styles/codemirror/dialog.css",
                 "data/styles/codemirror/fullscreen.css",
@@ -91,6 +90,7 @@
         }
     ],
     "web_accessible_resources": [
+        "/data/bundled.css",
         "/data/styles/font/MaterialIcons-Regular.woff2",
         "/data/styles/font/MaterialIcons-Regular.woff",
         "/data/styles/font/MaterialIcons-Regular.ttf",
