--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "license": "Apache-2.0",
     "dependencies": {
         "@reduxjs/toolkit": "^2.5.0",
+        "async-mutex": "^0.5.0",
         "codemirror": "^5.65.16",
         "dompurify": "^3.2.0",
         "framer-motion": "^12.0.1",
