--- a/.github/workflows/publish-stable.yml
+++ b/.github/workflows/publish-stable.yml
@@ -1,22 +1,22 @@
-name: "Publish"
+name: "Publish to stable listings"
 on:
   push:
     tags:
     - "v*"
+    - "!v*-*"
 
 jobs:
   build-release:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: '16'
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
     - run: npm ci
     - run: npm run fmt
     - run: npm run lint
     - env:
-        NODE_ENV: production
+        BUILD_TYPE: stable
+        BUILD_SHA: ${{ github.sha }}
       run: npm run build
 
     - name: Zip Chrome build
@@ -33,12 +33,12 @@ jobs:
         popd
 
     - name: Upload release build artifact - Chrome
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: release-build-chrome
         path: release-build-chrome.zip
     - name: Upload release build artifact - Firefox
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: release-build-firefox
         path: release-build-firefox.zip
@@ -47,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-release
     steps:
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
         name: release-build-chrome
     - uses: wdzeng/chrome-extension@v1
@@ -62,7 +62,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-release
     steps:
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
         name: release-build-firefox
     - uses: wdzeng/firefox-addon@v1
