--- a/.github/workflows/publish-stable.yml
+++ b/.github/workflows/publish-stable.yml
@@ -15,6 +15,7 @@ jobs:
     - run: npm run fmt
     - run: npm run lint
     - env:
+        NODE_ENV: production
         BUILD_TYPE: stable
         BUILD_SHA: ${{ github.sha }}
       run: npm run build
