--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
         "webextension-polyfill": "^0.12.0"
     },
     "devDependencies": {
+        "@inquirer/input": "^4.2.5",
+        "@inquirer/select": "^4.4.0",
         "@rollup/plugin-commonjs": "^28.0.0",
         "@rollup/plugin-node-resolve": "^16.0.0",
         "@rollup/plugin-replace": "^6.0.1",
@@ -54,7 +56,6 @@
         "eslint": "^8.57.0",
         "eslint-plugin-import": "^2.32.0",
         "eslint-plugin-react": "^7.37.2",
-        "inquirer": "^12.9.0",
         "jsdoc": "^4.0.2",
         "rollup": "^4.9.6",
         "rollup-plugin-copy": "^3.5.0",
